edited the copy on the serivces section, the nav menu links, and the sign off line at the end of the enitre site

--- a/index.html
+++ b/index.html
@@ -13,15 +13,12 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="#" class="logo">Mad Banana Media</a>
+            <a href="#" class="logo">Mad Banana Media 🍌</a>
             <ul class="nav-menu">
-                <li><a href="#hero">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#cta">Book Call</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#testimonials">Testimonials</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#about">Our Why 💡</a></li>
+                <li><a href="#services">Our What 💌</a></li>
+                <li><a href="#testimonials">Our Results 🎯</a></li>
+                <li><a href="#cta">Let's Chat ☎️</a></li>
             </ul>
             <div class="hamburger">
                 <span></span>
@@ -97,23 +94,46 @@
     <!-- Services Section -->
     <section id="services" class="services">
         <div class="services-container">
-            <h2 class="fade-in">Our Services</h2>
+            <h2 class="fade-in">How We Help</h2>
             <div class="services-grid">
                 <div class="service-card glass fade-in stagger-1">
-                    <h3>Complete Newsletter Strategy Development</h3>
-                    <p>From zero to hero - we'll build your comprehensive newsletter strategy from the ground up, including audience analysis, content planning, and growth tactics tailored to your unique brand.</p>
+                    <h3>🔍 Newsletter Strategy Audit</h3>
+                    <p><b>What You Get</b>
+                        <br>Complete analysis of your current email operations (or lack of). We'll course correct with specific recommendations, and a step by step breakdown.<br>
+                        <br><b>Perfect If...</b>
+                        <br>You're sending a newsletter already
+                        <br>But without any direction
+                        <br>It feels like a check-box exercise
+                        <br>Or you're getting poor results.</p>
                 </div>
+
                 <div class="service-card glass fade-in stagger-2">
-                    <h3>Newsletter Strategy Audit + Recommendations</h3>
-                    <p>Already have a newsletter but not seeing the results you want? We'll audit your current approach and provide detailed, actionable recommendations to boost engagement and growth.</p>
+                    <h3>⚙️ Newsletter Strategy Development </h3>
+                    <p><b>What You Get</b>
+                        <br>
+                        We'll build your comprehensive newsletter strategy from the ground up, including audience analysis, content planning, and tailored growth + monetisation recommendations.
+                        <br> So you can go from zero to 100, real quick.
+                        <br>
+                        <br><b>Perfect If...</b>
+                        <br>You recognise email is a powerful channel.
+                        <br>You're fed up of sending promotional emails that land in spam folders. 
+                        <br>You're ready to optimise email to fuel your biz</p>
                 </div>
+
                 <div class="service-card glass fade-in stagger-3">
-                    <h3>Newsletter Coaching for Entrepreneurial Creators + Founders</h3>
-                    <p>Ongoing strategic support for ambitious creators and founders. Get personalized coaching sessions to refine your newsletter strategy and scale your audience effectively.</p>
+                    <h3>🕶️ The Newsletter Mastery Program</h3>
+                    <p> <b>What You Get</b>
+                        <br>Set yourself up for success across the core newsletter pillars
+                        <br>Distribution, Content, and Business
+                        <br> With expert advice, guidance and coaching. 
+                        <br>
+                        <br><b>Perfect If...</b>
+                        <br> You're an entreprenerial creator or founder looking to launch or refine your newsletter strategy + develop a truely owned channel.
+
                 </div>
             </div>
             <div class="services-cta fade-in stagger-4">
-                <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" class="btn btn-large">Book Now For Free</a>
+                <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" class="btn btn-large">Got Questions? Let's Chat ☎️</a>
             </div>
         </div>
     </section>
@@ -170,6 +190,8 @@
         </div>
         
         <div class="footer-bottom">
+            <p>made with 🍌 by a bunch of new media champions.</p>
+            <br>
             <p>&copy; 2025 Mad Banana Media. All rights reserved.</p>
         </div>
     </footer>
