testimonial section updated

--- a/index.html
+++ b/index.html
@@ -175,21 +175,34 @@
     <!-- Testimonials Section -->
     <section id="testimonials" class="testimonials">
         <div class="testimonials-container">
-            <h2 class="fade-in">What Our Clients Say</h2>
+            <h2 class="fade-in">Are You Legit?</h2>
             <div class="testimonial-card glass fade-in stagger-1">
                 <div class="testimonial-content">
-                    "Mad Banana Media completely transformed our newsletter strategy. Our open rates increased by 150% and we've seen a significant boost in conversions. Their insights are pure gold!"
+                    <script type="text/javascript" src="https://testimonial.to/js/iframeResizer.min.js"></script>
+                    <iframe id='testimonialto-newsletters-tag-all-light' src="https://embed-v2.testimonial.to/w/newsletters?theme=light&card=base&loadMore=on&initialCount=20&tag=all&cc=off" frameborder="0" scrolling="no" width="100%"></iframe>
+                    <script type="text/javascript">iFrameResize({log: false, checkOrigin: false}, '#testimonialto-newsletters-tag-all-light');</script>
+
+                <!-- "Mad Banana Media completely transformed our newsletter strategy. Our open rates increased by 150% and we've seen a significant boost in conversions. Their insights are pure gold!"
                 </div>
-                <div class="testimonial-author">— Sarah Johnson, Founder of TechStart</div>
-            </div>
+                <div class="testimonial-author">— Sarah Johnson, Founder of TechStart</div> -->
+                </div>
             <!-- 
             TESTIMONIAL EMBED INSTRUCTIONS:
             Replace the testimonial card above with your testimonial.to HTML embed code.
             The embed should fit within the testimonials-container div.
             -->
-            <div class="testimonials-cta fade-in stagger-2">
+            <!--<div class="testimonials-cta fade-in stagger-2">
                 <p>Ready to see similar results?</p>
                 <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" class="btn btn-large" style="margin-top: 1rem;">Book Now For Free</a>
+            </div>
+            -->
+        </div>
+        <div>
+            <h2 class="fade-in">We helped them.
+            <br>
+            And we can help <span style="color:#f7b40d ;">YOU</span>.</h2>
+            <div class="testimonials-cta fade-in stagger-2">
+                <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" class="btn btn-large" style="margin-top: 1rem;">Start With A Free 1hr Call</a>
             </div>
         </div>
     </section>
