Added a 2nd CTA section after testimonials and altered some of the copy

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
     <section id="cta" class="cta-section">
         <div class="cta-container glass fade-in">
             <h2>Transform Your Newsletter Strategy</h2>
-            <p>Get immediately actionable advice with a free newsletter strategy 1-2-1.</p>
-            <p><b>You're just 60 mins away from expert advice.</b></p>
-            <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" class="btn btn-large">📞  Book My 1-2-1</a>
+            <p>Get immediately actionable advice in a free newsletter strategy 1-2-1.</p>
+            <p><b>You're just 60 mins away from free, expert advice.</b></p>
+            <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" class="btn btn-large">📞 Book Now</a>
         </div>
     </section>
 
@@ -206,6 +206,18 @@
             </div>
         </div>
     </section>
+
+    <!-- CTA Section -->
+    <section id="cta2" class="cta-section">
+        <div class="cta-container glass fade-in">
+            <h2>Transform Your Newsletter Strategy</h2>
+            <p><b>You're just 60 mins away from immediately actionable, expert advice.</b></p>
+            <p>Get your free newsletter strategy 1-2-1.</p>
+            <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" class="btn btn-large">📞 Book Now</a>
+        </div>
+    </section>
+
+
 
     <!-- Footer -->
     <footer id="contact" class="footer">
