FAQ setion added - html, css + js - added cta button + h2 at end of faq sec w some padding in it's own class

--- a/index.html
+++ b/index.html
@@ -217,7 +217,241 @@
         </div>
     </section>
 
+    <!-- FAQ Section -->
+    <section id="faq" class="faq-section">
+        <div class="faq-container">
+            <h2 class="fade-in">Frequently Asked Questions</h2>
+            
+            <div class="faq-items">
+                <!-- FAQ Item 1 -->
+                <div class="faq-item fade-in stagger-1">
+                    <button class="faq-question" onclick="toggleFaq(this)">
+                        How long does it take?
+                        <span class="faq-icon">+</span>
+                    </button>
+                    <div class="faq-answer">
+                        <div class="faq-answer-content">
+                            Here's the typical timelines for Mad Banana services:
+                            <br><br>
+                            Email Audits - 1-2 weeks (depending on how much you are already doing)
+                            <br><br>
+                            Email Strategy - 3-4 weeks (includes an initial email audit)
+                            <br><br>
+                            Email Dr - We can get started delivering this service in just a few days (minimum 3 month commitment).
+                            <br><br>
+                            Need something <em>mas rapido?</em><br><br>
+                            No drama banana! Get in touch, and we can talk about expedited delivery.
+                        </div>
+                    </div>
+                </div>
 
+                <!-- FAQ Item 2 -->
+                <div class="faq-item fade-in stagger-2">
+                    <button class="faq-question" onclick="toggleFaq(this)">
+                        Do you offer ongoing support after delivering an audit or a new strategy?
+                        <span class="faq-icon">+</span>
+                    </button>
+                    <div class="faq-answer">
+                        <div class="faq-answer-content">
+                            Yes.
+                            <br><br>
+                            It would be, like, so totally not cool if we didn't.
+                            <br><br>
+                            When we complete an audit, you'll always have a session with us to discuss the findings and ask any follow up questions.
+                            <br><br>
+                            We also schedule a 2nd session with you, 1-2 weeks after you start implementing any changes so we can offer advice if you encounter any snags.
+                            <br><br>
+                            Spoiler: there will be no snags!
+                            <br><br>
+                            If we're building an email strategy for you, we'll walk through the new strategy together.
+                            <br><br>
+                            And once you start implementing, we'll have 4 (yep, four!) weekly check-ins, in case there's anything you want to sense check or discuss on your way to email nirvana!
+                        </div>
+                    </div>
+                </div>
+
+                <!-- FAQ Item 3 -->
+                <div class="faq-item fade-in stagger-3">
+                    <button class="faq-question" onclick="toggleFaq(this)">
+                        Can you write my newsletter for me as a service?
+                        <span class="faq-icon">+</span>
+                    </button>
+                    <div class="faq-answer">
+                        <div class="faq-answer-content">
+                            As a rule, no.
+                            <br><br>
+                            We're here to solve problems for you.
+                            <br><br>
+                            And 90% of the time, getting someone else to write your newsletter doesn't solve the real problem.
+                            <br><br>
+                            We give you a strategy and a direction, so that whatever person or team is already running your newsletter can do it successfully.
+                            <br><br>
+                            And if you currently have no one running it, don't stress...
+                            <br><br>
+                            Email newsletters (when they're set up the right way) are a lean operation.
+                            <br><br>
+                            We'll work with you to get things set up right, so that email-to-email your operations stay light-touch.
+                            <br><br>
+                            If you've got more questions about this, get in touch, we can - very probably - help you understand your (real) problem.
+                        </div>
+                    </div>
+                </div>
+
+                <!-- FAQ Item 4 -->
+                <div class="faq-item fade-in stagger-4">
+                    <button class="faq-question" onclick="toggleFaq(this)">
+                        I'm confused. What's the difference between newsletters, and sales emails?
+                        <span class="faq-icon">+</span>
+                    </button>
+                    <div class="faq-answer">
+                        <div class="faq-answer-content">
+                            All newsletters are emails, but not all emails are newsletters.
+                            <br><br>
+                            Sales emails are usually sequences with assertive sales messaging or promotions (killing short term engagement and harming long term deliverability), or broad cold-outbound campaigns used to fill your top of funnel (usually very unsustainable).
+                            <br><br>
+                            Mad Banana is a Newsletter-First media brand - and a proud one!
+                            <br><br>
+                            And so we always lead with newsletters.
+                            <br><br>
+                            We can help you with sales sequences if they're appropriate for your strategy.
+                            <br><br>
+                            We can't help you with mass cold email campaigns. <em>yuck.</em> 🤮
+                        </div>
+                    </div>
+                </div>
+
+                <!-- FAQ Item 5 -->
+                <div class="faq-item">
+                    <button class="faq-question" onclick="toggleFaq(this)">
+                        What the $%!& even is an 'email strategy'?
+                        <span class="faq-icon">+</span>
+                    </button>
+                    <div class="faq-answer">
+                        <div class="faq-answer-content">
+                            Most people think they don't need a strategy for email.
+                            <br><br>
+                            But those same people often have a strategy for social media... 👀
+                            <br><br>
+                            For example, you might have:
+                            <br><br>
+                            - a specific strategy for LinkedIn,<br>
+                            - a specific strategy for Instagram,<br>
+                            - a specific strategy for YouTube.
+                            <br><br>
+                            You might even employ somebody, part-time or full-time, to look after those strategies and to deliver those strategies.
+                            <br><br>
+                            But spend no time implementing a strategy for email.
+                            <br><br>
+                            Instead, you send an email "when you have the time", or "whenever you remember".
+                            <br><br>
+                            An email strategy takes your execution in email away from being a box-checking exercise.
+                            <br><br>
+                            It transforms email into a platform, and a channel that is equal to, or greater that socials.
+                            <br><br>
+                            One that's often FAR more effective than socials! Especially if you're already doing good stuff over there.
+                            <br><br>
+                            Having an email strategy means that when someone mentions email, your body temperature doesn't rise.
+                            It means you understand the value of email and are extracting it. It means email is no longer a box checking exercise!
+                            <br><br>
+                            It's helps you achieve your business goals.
+                        </div>
+                    </div>
+                </div>
+
+                <!-- FAQ Item 6 -->
+                <div class="faq-item">
+                    <button class="faq-question" onclick="toggleFaq(this)">
+                        Do you work on a retainer?
+                        <span class="faq-icon">+</span>
+                    </button>
+                    <div class="faq-answer">
+                        <div class="faq-answer-content">
+                            Not usually. Email audits, and email newsletter strategy development services are one-time projects, usually delivered in 2-3 weeks.
+                            <br><br>
+                            Our Email Dr. service Is a subscription which runs for a minimum of three months and is billed on a monthly basis, similar to a retainer.
+                            <br><br>
+                            In certain cases, it makes sense for us to support you as a delivery partner for your newsletter.
+                            <br><br>
+                            In those rare instances, we work on a 6 month minimum retainer.
+                            <br><br>
+                            Get in touch, and we can chat about if this is right for you over a hot coffee and a banana split!
+                        </div>
+                    </div>
+                </div>
+
+                <!-- FAQ Item 7 -->
+                <div class="faq-item">
+                    <button class="faq-question" onclick="toggleFaq(this)">
+                        Can't we just get AI to do what you do?
+                        <span class="faq-icon">+</span>
+                    </button>
+                    <div class="faq-answer">
+                        <div class="faq-answer-content">
+                            You can certainly try!
+                            <br><br>
+                            We constantly experiment with AI for our own publications, for both operations and content development.
+                            <br><br>
+                            AI always make us more efficient, but it's far from mastering the lived experience and creativity required to deliver an exacting strategy.
+                            <br><br>
+                            The whole Mad Banana Philosophy is that email, and audience ownership, is powerful.
+                            <br><br>
+                            So if it's a choice between AI and nothing, or you think an entirely AI powered strategy is the right step forward for your business, we encourage you to go for it!
+                        </div>
+                    </div>
+                </div>
+
+                <!-- FAQ Item 8 -->
+                <div class="faq-item">
+                    <button class="faq-question" onclick="toggleFaq(this)">
+                        You work with businesses and creators, aren't they very different customers?
+                        <span class="faq-icon">+</span>
+                    </button>
+                    <div class="faq-answer">
+                        <div class="faq-answer-content">
+                            Oh yes they are! Very different in fact.
+                            <br><br>
+                            But with one key similarity: A lack of audience ownership.
+                            <br><br>
+                            Both creators and businesses put a great deal of time, effort, and resource into <em>earning</em> attention.
+                            <br><br>
+                            Successful creators and businesses are good at earning attention over and over and over again.
+                            <br><br>
+                            Earning that attention in an effective way is how they're able to build a trusting relationship, and ultimately, to sell.
+                            <br><br>
+                            What VERY few creators and business do, is LEVERAGE the attention they've earned, by owning it (read:capturing an email).
+                            <br><br>
+                            Instead, they let 99% of the attention 'slip through the net'. And then when they want to get in front of those people again, they have to go out and EARN the attention <b>again</b>.
+                            <br><br>
+                            The Mad Banana Perspective: two profiles: same problem.
+                            <br><br>
+                            Let's fix it!
+                        </div>
+                    </div>
+                </div>
+
+                <!-- FAQ Item 9 -->
+                <div class="faq-item">
+                    <button class="faq-question" onclick="toggleFaq(this)">
+                        Do you only work with certain email platforms?
+                        <span class="faq-icon">+</span>
+                    </button>
+                    <div class="faq-answer">
+                        <div class="faq-answer-content">
+                            We can work with irrespective of your email platform.
+                            <br><br>
+                            Over the years, we've used almost every major email newsletter software for our own publications - so we can genuinely speak to the pros and cons of each.
+                            <br><br>
+                            If we think a migration could benefit you, we'll recommend it.
+                            <br><br>
+                            Otherwise it's all groovy!
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    
 
     <!-- Footer -->
     <footer id="contact" class="footer">
