just capturing all changes and line breaks as some were missed in the last push

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     <!-- FAQ Section -->
     <section id="faq" class="faq-section">
         <div class="faq-container">
-            <h2 class="fade-in">Frequently Asked Questions</h2>
+            <h2 class="fade-in">No B.S. F.A.Q.</h2>
             
             <div class="faq-items">
                 <!-- FAQ Item 1 -->
@@ -448,10 +448,18 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
 
-    
+            <div class="faq-cta-padding">
+                <h2 class="fade-in">We helped them.
+                <br>
+                And we can help <span style="color:#f7b40d ;">YOU</span>.</h2>
+                <div class="faq-cta fade-in stagger-2">
+                    <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" class="btn btn-large" style="margin-top: 1rem;">Start With A Free 1hr Call</a>
+                </div>
+            </div>
+
+        </div>    
+    </section>
 
     <!-- Footer -->
     <footer id="contact" class="footer">
