update FAQ CTA copy

--- a/index.html
+++ b/index.html
@@ -450,11 +450,11 @@
             </div>
 
             <div class="faq-cta-padding">
-                <h2 class="fade-in">We helped them.
+                <h2 class="fade-in">Got questions?
                 <br>
-                And we can help <span style="color:#f7b40d ;">YOU</span>.</h2>
+                We have the <span style="color:#f7b40d ;">answers</span>.</h2>
                 <div class="faq-cta fade-in stagger-2">
-                    <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" class="btn btn-large" style="margin-top: 1rem;">Start With A Free 1hr Call</a>
+                    <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" class="btn btn-large" style="margin-top: 1rem;">Chat With Us</a>
                 </div>
             </div>
 
