--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
                 <li><a href="#about">Our Why 💡</a></li>
                 <li><a href="#services">Our What 💌</a></li>
                 <li><a href="#testimonials">Our Results 🎯</a></li>
+                <li><a href="#faq">Your Questions 🙋</a></li>
+                <li><a href="https://madbananamedia.com/partners">Partners 💼</a></li>
                 <li><a href="#cta">Let's Chat ☎️</a></li>
             </ul>
             <div class="hamburger">
@@ -474,11 +476,13 @@
             </div>
             
             <div class="footer-section">
-                <h3>Links You'll Like</h3>
+                <h3>Links You'll 💛</h3>
                 <div class="footer-links">
                     <p><a href="https://linkedin.com/in/chriscerra" target="_blank">LinkedIn</a></p>
                     <p><a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" target="_blank">Free Email Strategy 1-2-1</a></p>
                     <p><a href="https://testimonial.to/newsletters/love/all" target="_blank">Wall of Love</a></p>
+                    <p><a href="#faq">No B.S. F.A.Q</a></p>
+                    <p><a href="https://madbananamedia.com/partners">Let's Team Up</a></p>
                 </div>
             </div>
 
