privacy page added, and favicon added

--- a/partners.html
+++ b/partners.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="/favicon.png">
+
 </head>
 <body>
     <!-- Navigation -->
@@ -41,15 +43,24 @@
                     <p>Absolutely amazing at what you do? <br>Working with brands or creators? <br><strong>Let's team up</strong>.</p>
                     <ul class="partners-list">
                         <li>Marketing Agencies</li>
-                        <li>Social Media Marketing Agencies</li>
+                        <li>Social Media Agencies</li>
                         <li>Influencer / Social Media Talent Management Companies</li>
                         <li>Affiliate Marketplaces</li>
                         <li>and more...</li>
                     </ul>                    
-                    <p>If that's you, get in touch.</p>
+                    <p>We want to hear from you.</p>
+                    <p><strong>Here's how help you</strong></p>
+                    <ul class="partners-list">
+                        <li>Webinars for your clients</li>
+                        <li>Newsletter Strategy Workshops</li>
+                        <li>Newsletter Office Hours</li>
+                        <li>Newsletter Strategy 1-2-1's</li>
+                        <li>Newsletter platform training sessions</li>
+                        <li>Dedicated perks + discounts</li>
+                        <li>and more...</li>
+                    </ul>   
                 </div>
             </div>        
-
 
 
         <div class="cta-container glass fade-in stagger-2">
@@ -60,13 +71,6 @@
             <a href="mailto:hi@madbananamedia.com" class="btn btn-large">Get In Touch</a>
         </div>
     </section>
-
-
-
-
-
-
-
 
 
     <!-- Footer -->
