now running on custom domain

--- a/partners.html
+++ b/partners.html
@@ -21,7 +21,7 @@
                 <li><a href="#services">Our What 💌</a></li>
                 <li><a href="#testimonials">Our Results 🎯</a></li>
                 <li><a href="#faq">Your Questions 🙋</a></li>
-                <li><a href="#cta">Let's Chat ☎️</a></li>
+                <li><a href="https://cal.com/mad-banana-media-ojblzk/1-2-1">Let's Chat ☎️</a></li>
             </ul>
             <div class="hamburger">
                 <span></span>
