updates to nav bar links and some copy tweaks (done from the airport)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="#" class="logo">MAD BANANA MEDIA 🍌</a>
+            <a href="https://madbananamedia.com" class="logo">MAD BANANA MEDIA 🍌</a>
             <ul class="nav-menu">
                 <li><a href="#about">Our Why 💡</a></li>
                 <li><a href="#services">Our What 💌</a></li>
@@ -179,7 +179,7 @@
     <!-- Testimonials Section -->
     <section id="testimonials" class="testimonials">
         <div class="testimonials-container">
-            <h2 class="fade-in">Are You Legit?</h2>
+            <h2 class="fade-in">They're MAD About Us</h2>
             <div class="testimonial-card glass fade-in stagger-1">
                 <div class="testimonial-content">
                     <script type="text/javascript" src="https://testimonial.to/js/iframeResizer.min.js"></script>
