--- a/newslettermasteryprogram.html
+++ b/newslettermasteryprogram.html
@@ -32,26 +32,30 @@
         </div>
     </nav>
 
-    <!-- Partners CTA Section -->
+
+<!-- MAIN Section -->
     <section class="cta-section">
 
             <div class="partners-content glass fade-in">
-                <h1>Mad Partners Wanted</h1>
-                <h2 class="partners-subtitle">Let's conquer the world.</h2>
-                <p class="partners-tagline">Just kidding...<br><br><em>But not really</em> 👀</p>
+                <h1>Master Your Newsletter</h1>
+                <h2 class="partners-subtitle">How would you feel if your newsletter "just worked"?</h2>
+                <p class="partners-tagline">That's the Newsletter Mastery Program</p>
                 
                 <div class="partners-description">
-                    <p>Absolutely amazing at what you do? <br>Working with brands or creators? <br><strong>Let's team up</strong>.</p>
+                <p><strong>7 years of experience running multiple newsletters</strong><br>Made digestible for you.</p>
+
+                    <p><strong>7 years of experience running multiple newsletters</strong><br>Made digestible for you.</p>
+                    <p><strong>Together, we'll cover</strong><br>Made digestible for you.</p>
                     <ul class="partners-list">
-                        <li>VCs</li>
-                        <li>Social Media Agencies</li>
+                        <li>Distribution</li>
+                            <li>Social Media Agencies</li>
                         <li>Influencer + KOL Talent Managers + Agents</li>
                         <li>Affiliate Marketplaces</li>
                         <li>Shared Office Facilities</li>
                         <li>and more...</li>
                     </ul>                    
                     <p>We want to hear from you.</p>
-                    <p><strong>Here's how help you</strong></p>
+                    <p><strong>Yfghkjlkhgfghgjhk</strong></p>
                     <ul class="partners-list">
                         <li>Webinars for your clients</li>
                         <li>Newsletter Strategy Workshops</li>
@@ -73,6 +77,16 @@
             <a href="mailto:hi@madbananamedia.com" class="btn btn-large">Get In Touch</a>
         </div>
     </section>
+
+
+
+
+
+
+
+
+
+
 
 
     <!-- Footer -->
@@ -115,3 +129,8 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+
+
+
+
