--- a/privacy.html
+++ b/privacy.html
@@ -15,12 +15,12 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="#" class="logo">MAD BANANA MEDIA 🍌</a>
+            <a href="https://madbananamedia.com" class="logo">MAD BANANA MEDIA 🍌</a>
             <ul class="nav-menu">
-                <li><a href="#about">Our Why 💡</a></li>
-                <li><a href="#services">Our What 💌</a></li>
-                <li><a href="#testimonials">Our Results 🎯</a></li>
-                <li><a href="#faq">Your Questions 🙋</a></li>
+                <li><a href="https://madbananamedia.com/#about">Our Why 💡</a></li>
+                <li><a href="https://madbananamedia.com/#services">Our What 💌</a></li>
+                <li><a href="https://madbananamedia.com/#testimonials">Our Results 🎯</a></li>
+                <li><a href="https://madbananamedia.com/#faq">Your Questions 🙋</a></li>
                 <li><a href="https://madbananamedia.com/partners">Partners 💼</a></li>
                 <li><a href="https://cal.com/mad-banana-media-ojblzk/1-2-1">Let's Chat ☎️</a></li>
             </ul>
